--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@
     padding: 20px;
     text-align: center;
     align-items:center; 
-
     border-radius: 20px;
 }
 
@@ -21,6 +20,8 @@
     font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
     font-size: 16pt;
+    height: 90px;
+    line-height: 90px;
 }
 
 #result{
