--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@
     cursor: none;
 }
 
-#footer{
+#note{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12pt;
     font-weight: bold;
